Выбор Natural query по вектору
